--- a/nanatry.cbp
+++ b/nanatry.cbp
@@ -46,10 +46,12 @@
 		<Unit filename="include/Block.h" />
 		<Unit filename="include/CodeEditor.h" />
 		<Unit filename="include/Desk.h" />
+		<Unit filename="include/Xstr.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Block.cpp" />
 		<Unit filename="src/CodeEditor.cpp" />
 		<Unit filename="src/Desk.cpp" />
+		<Unit filename="src/Xstr.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
