add string operations，change model file extention from txt to csv. add Link class

--- a/nanatry.cbp
+++ b/nanatry.cbp
@@ -46,11 +46,13 @@
 		<Unit filename="include/Block.h" />
 		<Unit filename="include/CodeEditor.h" />
 		<Unit filename="include/Desk.h" />
+		<Unit filename="include/Link.h" />
 		<Unit filename="include/Xstr.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Block.cpp" />
 		<Unit filename="src/CodeEditor.cpp" />
 		<Unit filename="src/Desk.cpp" />
+		<Unit filename="src/Link.cpp" />
 		<Unit filename="src/Xstr.cpp" />
 		<Extensions>
 			<code_completion />
