--- a/nanatry.cbp
+++ b/nanatry.cbp
@@ -34,6 +34,10 @@
 					<Add option="-std=c++0x" />
 					<Add directory="include" />
 				</Compiler>
+				<ResourceCompiler>
+					<Add directory="../../../Downloads/nana 1.3.0/nana/source" />
+					<Add directory="../../../Downloads/nana 1.3.0/nana/source/gui" />
+				</ResourceCompiler>
 				<Linker>
 					<Add option="-s" />
 				</Linker>
@@ -45,14 +49,17 @@
 		</Compiler>
 		<Unit filename="include/Block.h" />
 		<Unit filename="include/CodeEditor.h" />
+		<Unit filename="include/CodeLink.h" />
 		<Unit filename="include/Desk.h" />
 		<Unit filename="include/Link.h" />
+		<Unit filename="include/Scope.h" />
 		<Unit filename="include/Xstr.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Block.cpp" />
 		<Unit filename="src/CodeEditor.cpp" />
 		<Unit filename="src/Desk.cpp" />
 		<Unit filename="src/Link.cpp" />
+		<Unit filename="src/Scope.cpp" />
 		<Unit filename="src/Xstr.cpp" />
 		<Extensions>
 			<code_completion />
