--- a/nanatry.cbp
+++ b/nanatry.cbp
@@ -2,7 +2,7 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="nanatry" />
+		<Option title="CodeLink" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
@@ -12,8 +12,8 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-std=c++0x" />
-					<Add option="-g" />
+					<Add option="-Os" />
+					<Add option="-std=c++11" />
 					<Add directory="include" />
 				</Compiler>
 				<ResourceCompiler>
@@ -21,6 +21,7 @@
 					<Add directory="../../../Downloads/nana 1.3.0/nana/source/gui" />
 				</ResourceCompiler>
 				<Linker>
+					<Add option="-s" />
 					<Add option="-lnana -lgdi32 -lcomdlg32" />
 				</Linker>
 			</Target>
@@ -51,11 +52,13 @@
 		<Unit filename="include/CodeEditor.h" />
 		<Unit filename="include/CodeLink.h" />
 		<Unit filename="include/Desk.h" />
+		<Unit filename="include/Source.h" />
 		<Unit filename="include/Xstr.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Block.cpp" />
 		<Unit filename="src/CodeEditor.cpp" />
 		<Unit filename="src/Desk.cpp" />
+		<Unit filename="src/Source.cpp" />
 		<Unit filename="src/Xstr.cpp" />
 		<Extensions>
 			<code_completion />
