--- a/nanatry.cbp
+++ b/nanatry.cbp
@@ -12,7 +12,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-Os" />
+					<Add option="-O1" />
 					<Add option="-std=c++11" />
 					<Add directory="include" />
 				</Compiler>
