--- a/CodeLink.cbp
+++ b/CodeLink.cbp
@@ -12,8 +12,8 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O1" />
 					<Add option="-std=c++11" />
+					<Add option="-g" />
 					<Add directory="include" />
 				</Compiler>
 				<ResourceCompiler>
@@ -21,7 +21,6 @@
 					<Add directory="../../../Downloads/nana 1.3.0/nana/source/gui" />
 				</ResourceCompiler>
 				<Linker>
-					<Add option="-s" />
 					<Add option="-lnana -lgdi32 -lcomdlg32" />
 				</Linker>
 			</Target>
@@ -31,7 +30,6 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
 					<Add option="-std=c++0x" />
 					<Add directory="include" />
 				</Compiler>
@@ -39,9 +37,6 @@
 					<Add directory="../../../Downloads/nana 1.3.0/nana/source" />
 					<Add directory="../../../Downloads/nana 1.3.0/nana/source/gui" />
 				</ResourceCompiler>
-				<Linker>
-					<Add option="-s" />
-				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
